--- a/packages/server/src/infra/views/email/confirmation.hbs
+++ b/packages/server/src/infra/views/email/confirmation.hbs
@@ -53,21 +53,21 @@
 
 <body style="
       mso-line-height-rule: 2;
-      max-width: 700px;
+      max-width: 725px;
       margin: auto;
       font-family: Arial, Helvetica, sans-serif;
     ">
-  <table width="100%" cellspacing="10" cellpadding="5" border="0">
+  <table width="100%" cellspacing="10" cellpadding="10" border="0">
     <tr>
-      <td style="border-bottom: 2px solid #21ae9f">
-        <h1 style="font-size: 30px; font-weight: bold">TechBlog</h1>
+      <td style="border-bottom: 1px solid #21ae9f">
+        <img alt="TechBlog" width="60px" src="https://i.postimg.cc/90G6xdMn/Logo.png" />
       </td>
     </tr>
     <tr>
       <td>
-        <h2 style="text-align: center; font-size: 26px; font-weight: bold">
+        <h1 style="text-align: center; font-size: 28px; font-weight: bold">
           Welcome to the TechBlog!
-        </h2>
+        </h1>
       </td>
     </tr>
     <tr>
